--- a/assets/scss/import/_general.scss
+++ b/assets/scss/import/_general.scss
@@ -1,19 +1,35 @@
 html {
-  box-sizing: border-box;
-  scroll-behavior: smooth;
+    box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 *,
 *:before,
 *:after {
-  box-sizing: inherit;
+    box-sizing: inherit;
+    margin: 0;
+    padding: 0;
 }
 
-body{
-  -webkit-font-smoothing: antialiased;
-  font: {
-    size: $font-size-base;
-    family: $font-family;
-    weight: 400;
-  }
+body {
+    -webkit-font-smoothing: antialiased;
+    font: {
+        size: $font-size-base;
+        family: $font-family;
+        weight: 400;
+    }
+    width: 100%;
+    height: 100vh;
+    max-height: 100vh;
+    background: url("/assets/img/background.jpg") center center fixed;
+    background-size: cover;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+a {
+    text-decoration: none;
+    color: $color-text-light;
 }
