--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,7 @@ body {
   max-height: 100vh;
   background: url("/assets/img/background.jpg") center center fixed;
   background-size: cover;
+  background-color: black;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -82,7 +83,7 @@ main header {
 }
 
 main header img {
-  width: 5em;
+  width: 4em;
   height: auto;
 }
 
@@ -90,5 +91,15 @@ main header h1 {
   color: #f1f1f1;
   font-size: 2em;
   font-weight: 600;
+}
+
+main footer a {
+  text-align: center;
+  -webkit-transition: color 0.25s;
+  transition: color 0.25s;
+}
+
+main footer a:hover {
+  color: #008bf8;
 }
 /*# sourceMappingURL=style.css.map */
