--- a/assets/scss/import/_general.scss
+++ b/assets/scss/import/_general.scss
@@ -23,6 +23,7 @@ body {
     max-height: 100vh;
     background: url("/assets/img/background.jpg") center center fixed;
     background-size: cover;
+    background-color: black;
 
     display: flex;
     flex-direction: column;
