--- a/assets/scss/import/_main.scss
+++ b/assets/scss/import/_main.scss
@@ -30,7 +30,7 @@ main {
     }
 
     .content {
-        width: 80%;
+        width: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -92,5 +92,16 @@ main {
                 color: $color-primary;
             }
         }
+    }
+}
+
+@media (max-width: 750px) {
+    main {
+        width: 95%;
+    }
+}
+@media (max-width: 400px) {
+    main {
+        padding: 1em 0;
     }
 }
